--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+	"name": "image-joiner",
+	"version": "1.0.0",
+	"description": "Easy and Fast Grid Image Joiner",
+	"main": "dist/index.js",
+	"types": "dist/index.d.ts",
+	"files": [
+		"/dist"
+	],
 	"devDependencies": {
 		"@types/jest": "^29.5.3",
 		"@types/jest-image-snapshot": "^6.2.0",
