--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "image-joiner",
-	"version": "1.0.0",
+	"version": "1.0.1-alpha.0",
 	"description": "Easy and Fast Grid Image Joiner",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
