--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"files": [
 		"/dist"
 	],
+	"license":"MIT",
 	"devDependencies": {
 		"@types/jest": "^29.5.3",
 		"@types/jest-image-snapshot": "^6.2.0",
