--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
 	"name": "image-joiner",
 	"version": "1.0.1-alpha.0",
 	"description": "Easy and Fast Grid Image Joiner",
+	"author": "Bjorn<https://github.com/lxxorz>",
+	"packageManager": "pnpm@8.6.12",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"files": [
