--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "image-joiner",
-	"version": "1.0.1",
+	"version": "1.1.0",
 	"description": "Easy and Fast Grid Image Joiner",
 	"author": "Bjorn<https://github.com/lxxorz>",
 	"packageManager": "pnpm@8.6.12",
@@ -14,7 +14,14 @@
 		"url": "https://github.com/lxxorz/image-joiner",
 		"type": "git"
 	},
-	"keywords": ["image", "merge", "join", "sharp", "grid", "node"],
+	"keywords": [
+		"image",
+		"merge",
+		"join",
+		"sharp",
+		"grid",
+		"node"
+	],
 	"license": "MIT",
 	"devDependencies": {
 		"@types/jest": "^29.5.3",
